--- a/red_bicicletas/public/stylesheets/style.css
+++ b/red_bicicletas/public/stylesheets/style.css
@@ -1,8 +1,56 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;  
+}
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
+h1 {
+  font-size: 32px;
+  color: #4f4f4f;
+  margin: 3px 0;
+}
+/* Estilos para los parrafos */
+p {
+  font-size: 20px;
+  font-weight: 500;
+  color: #11004d;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+span {font-size: 20px; color: #db0f53; font-weight: 500;}
+/* Estilos para el menu de navegacion */
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #1e1e1f;
+}
 
-a {
-  color: #00B7FF;
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: #FFF;  
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: #6100a1;
+}
+
+.active {
+  background-color: #014ab8;
+}
+
+/* Estilos para el mapa */
+#mapid{
+  height: 600px;
+  /* border: #4f4f4f solid .3px; */
 }
